parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABS
    AMPERSAND
    BREAK
    CAPACITY
    CLONE
    COMA
    CONTAINS
    CONTINUE
    CORCHDER
    CORCHIZQ
    ELSE
    FN
    FOR
    IF
    IN
    INSERT
    LEN
    LLAVEDER
    LLAVEIZQ
    LOOP
    MAIN
    MATCH
    MOD
    NEW
    POW
    POWF
    PUB
    PUNTO
    PUSH
    REMOVE
    RETURN
    SQRT
    STRUCT
    TO_STRING
    WHILE
    WITH_CAPACITY

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> impresion
Rule 5     instruccion -> declaracion
Rule 6     expresion -> expresion MAYOR expresion
Rule 7     expresion -> expresion MENOR expresion
Rule 8     expresion -> expresion MAYORIGUAL expresion
Rule 9     expresion -> expresion MENORIGUAL expresion
Rule 10    expresion -> expresion IGUALIGUAL expresion
Rule 11    expresion -> expresion NOIGUAL expresion
Rule 12    expresion -> expresion OR expresion
Rule 13    expresion -> expresion AND expresion
Rule 14    expresion -> NOT expresion
Rule 15    expresion -> expresion MAS expresion
Rule 16    expresion -> expresion MENOS expresion
Rule 17    expresion -> expresion POR expresion
Rule 18    expresion -> expresion DIVISION expresion
Rule 19    expresion -> expresion MODULO expresion
Rule 20    expresion -> MENOS expresion
Rule 21    expresion -> PARENTIZQ expresion PARENTDER
Rule 22    impresion -> PRINT EXCLAMACION PARENTIZQ expresion PARENTDER PUNTOYCOMA
Rule 23    impresion -> PRINTLN EXCLAMACION PARENTIZQ expresion PARENTDER PUNTOYCOMA
Rule 24    declaracion -> LET MUT ID IGUAL expresion PUNTOYCOMA
Rule 25    declaracion -> LET MUT ID DOSPUNTOS tipo IGUAL expresion PUNTOYCOMA
Rule 26    tipo -> I64
Rule 27    tipo -> F64
Rule 28    tipo -> BOOL
Rule 29    tipo -> CHAR
Rule 30    tipo -> STRING
Rule 31    tipo -> STR
Rule 32    tipo -> USIZE
Rule 33    tipo -> VEC
Rule 34    expresion -> ENTERO
Rule 35    expresion -> DECIMAL
Rule 36    expresion -> ID
Rule 37    expresion -> TRUE
Rule 38    expresion -> FALSE
Rule 39    expresion -> CADENA
Rule 40    expresion -> CARACTER

Terminals, with rules where they appear

ABS                  : 
AMPERSAND            : 
AND                  : 13
BOOL                 : 28
BREAK                : 
CADENA               : 39
CAPACITY             : 
CARACTER             : 40
CHAR                 : 29
CLONE                : 
COMA                 : 
CONTAINS             : 
CONTINUE             : 
CORCHDER             : 
CORCHIZQ             : 
DECIMAL              : 35
DIVISION             : 18
DOSPUNTOS            : 25
ELSE                 : 
ENTERO               : 34
EXCLAMACION          : 22 23
F64                  : 27
FALSE                : 38
FN                   : 
FOR                  : 
I64                  : 26
ID                   : 24 25 36
IF                   : 
IGUAL                : 24 25
IGUALIGUAL           : 10
IN                   : 
INSERT               : 
LEN                  : 
LET                  : 24 25
LLAVEDER             : 
LLAVEIZQ             : 
LOOP                 : 
MAIN                 : 
MAS                  : 15
MATCH                : 
MAYOR                : 6
MAYORIGUAL           : 8
MENOR                : 7
MENORIGUAL           : 9
MENOS                : 16 20
MOD                  : 
MODULO               : 19
MUT                  : 24 25
NEW                  : 
NOIGUAL              : 11
NOT                  : 14
OR                   : 12
PARENTDER            : 21 22 23
PARENTIZQ            : 21 22 23
POR                  : 17
POW                  : 
POWF                 : 
PRINT                : 22
PRINTLN              : 23
PUB                  : 
PUNTO                : 
PUNTOYCOMA           : 22 23 24 25
PUSH                 : 
REMOVE               : 
RETURN               : 
SQRT                 : 
STR                  : 31
STRING               : 30
STRUCT               : 
TO_STRING            : 
TRUE                 : 37
USIZE                : 32
VEC                  : 33
WHILE                : 
WITH_CAPACITY        : 
error                : 

Nonterminals, with rules where they appear

declaracion          : 5
expresion            : 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 15 15 16 16 17 17 18 18 19 19 20 21 22 23 24 25
impresion            : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2
tipo                 : 25

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . impresion
    (5) instruccion -> . declaracion
    (22) impresion -> . PRINT EXCLAMACION PARENTIZQ expresion PARENTDER PUNTOYCOMA
    (23) impresion -> . PRINTLN EXCLAMACION PARENTIZQ expresion PARENTDER PUNTOYCOMA
    (24) declaracion -> . LET MUT ID IGUAL expresion PUNTOYCOMA
    (25) declaracion -> . LET MUT ID DOSPUNTOS tipo IGUAL expresion PUNTOYCOMA

    PRINT           shift and go to state 6
    PRINTLN         shift and go to state 7
    LET             shift and go to state 8

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    impresion                      shift and go to state 4
    declaracion                    shift and go to state 5

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . impresion
    (5) instruccion -> . declaracion
    (22) impresion -> . PRINT EXCLAMACION PARENTIZQ expresion PARENTDER PUNTOYCOMA
    (23) impresion -> . PRINTLN EXCLAMACION PARENTIZQ expresion PARENTDER PUNTOYCOMA
    (24) declaracion -> . LET MUT ID IGUAL expresion PUNTOYCOMA
    (25) declaracion -> . LET MUT ID DOSPUNTOS tipo IGUAL expresion PUNTOYCOMA

    $end            reduce using rule 1 (init -> instrucciones .)
    PRINT           shift and go to state 6
    PRINTLN         shift and go to state 7
    LET             shift and go to state 8

    instruccion                    shift and go to state 9
    impresion                      shift and go to state 4
    declaracion                    shift and go to state 5

state 3

    (3) instrucciones -> instruccion .

    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 3 (instrucciones -> instruccion .)
    LET             reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> impresion .

    PRINT           reduce using rule 4 (instruccion -> impresion .)
    PRINTLN         reduce using rule 4 (instruccion -> impresion .)
    LET             reduce using rule 4 (instruccion -> impresion .)
    $end            reduce using rule 4 (instruccion -> impresion .)


state 5

    (5) instruccion -> declaracion .

    PRINT           reduce using rule 5 (instruccion -> declaracion .)
    PRINTLN         reduce using rule 5 (instruccion -> declaracion .)
    LET             reduce using rule 5 (instruccion -> declaracion .)
    $end            reduce using rule 5 (instruccion -> declaracion .)


state 6

    (22) impresion -> PRINT . EXCLAMACION PARENTIZQ expresion PARENTDER PUNTOYCOMA

    EXCLAMACION     shift and go to state 10


state 7

    (23) impresion -> PRINTLN . EXCLAMACION PARENTIZQ expresion PARENTDER PUNTOYCOMA

    EXCLAMACION     shift and go to state 11


state 8

    (24) declaracion -> LET . MUT ID IGUAL expresion PUNTOYCOMA
    (25) declaracion -> LET . MUT ID DOSPUNTOS tipo IGUAL expresion PUNTOYCOMA

    MUT             shift and go to state 12


state 9

    (2) instrucciones -> instrucciones instruccion .

    PRINT           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    PRINTLN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LET             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 10

    (22) impresion -> PRINT EXCLAMACION . PARENTIZQ expresion PARENTDER PUNTOYCOMA

    PARENTIZQ       shift and go to state 13


state 11

    (23) impresion -> PRINTLN EXCLAMACION . PARENTIZQ expresion PARENTDER PUNTOYCOMA

    PARENTIZQ       shift and go to state 14


state 12

    (24) declaracion -> LET MUT . ID IGUAL expresion PUNTOYCOMA
    (25) declaracion -> LET MUT . ID DOSPUNTOS tipo IGUAL expresion PUNTOYCOMA

    ID              shift and go to state 15


state 13

    (22) impresion -> PRINT EXCLAMACION PARENTIZQ . expresion PARENTDER PUNTOYCOMA
    (6) expresion -> . expresion MAYOR expresion
    (7) expresion -> . expresion MENOR expresion
    (8) expresion -> . expresion MAYORIGUAL expresion
    (9) expresion -> . expresion MENORIGUAL expresion
    (10) expresion -> . expresion IGUALIGUAL expresion
    (11) expresion -> . expresion NOIGUAL expresion
    (12) expresion -> . expresion OR expresion
    (13) expresion -> . expresion AND expresion
    (14) expresion -> . NOT expresion
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion POR expresion
    (18) expresion -> . expresion DIVISION expresion
    (19) expresion -> . expresion MODULO expresion
    (20) expresion -> . MENOS expresion
    (21) expresion -> . PARENTIZQ expresion PARENTDER
    (34) expresion -> . ENTERO
    (35) expresion -> . DECIMAL
    (36) expresion -> . ID
    (37) expresion -> . TRUE
    (38) expresion -> . FALSE
    (39) expresion -> . CADENA
    (40) expresion -> . CARACTER

    NOT             shift and go to state 18
    MENOS           shift and go to state 19
    PARENTIZQ       shift and go to state 16
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    ID              shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    CADENA          shift and go to state 25
    CARACTER        shift and go to state 26

    expresion                      shift and go to state 17

state 14

    (23) impresion -> PRINTLN EXCLAMACION PARENTIZQ . expresion PARENTDER PUNTOYCOMA
    (6) expresion -> . expresion MAYOR expresion
    (7) expresion -> . expresion MENOR expresion
    (8) expresion -> . expresion MAYORIGUAL expresion
    (9) expresion -> . expresion MENORIGUAL expresion
    (10) expresion -> . expresion IGUALIGUAL expresion
    (11) expresion -> . expresion NOIGUAL expresion
    (12) expresion -> . expresion OR expresion
    (13) expresion -> . expresion AND expresion
    (14) expresion -> . NOT expresion
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion POR expresion
    (18) expresion -> . expresion DIVISION expresion
    (19) expresion -> . expresion MODULO expresion
    (20) expresion -> . MENOS expresion
    (21) expresion -> . PARENTIZQ expresion PARENTDER
    (34) expresion -> . ENTERO
    (35) expresion -> . DECIMAL
    (36) expresion -> . ID
    (37) expresion -> . TRUE
    (38) expresion -> . FALSE
    (39) expresion -> . CADENA
    (40) expresion -> . CARACTER

    NOT             shift and go to state 18
    MENOS           shift and go to state 19
    PARENTIZQ       shift and go to state 16
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    ID              shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    CADENA          shift and go to state 25
    CARACTER        shift and go to state 26

    expresion                      shift and go to state 27

state 15

    (24) declaracion -> LET MUT ID . IGUAL expresion PUNTOYCOMA
    (25) declaracion -> LET MUT ID . DOSPUNTOS tipo IGUAL expresion PUNTOYCOMA

    IGUAL           shift and go to state 28
    DOSPUNTOS       shift and go to state 29


state 16

    (21) expresion -> PARENTIZQ . expresion PARENTDER
    (6) expresion -> . expresion MAYOR expresion
    (7) expresion -> . expresion MENOR expresion
    (8) expresion -> . expresion MAYORIGUAL expresion
    (9) expresion -> . expresion MENORIGUAL expresion
    (10) expresion -> . expresion IGUALIGUAL expresion
    (11) expresion -> . expresion NOIGUAL expresion
    (12) expresion -> . expresion OR expresion
    (13) expresion -> . expresion AND expresion
    (14) expresion -> . NOT expresion
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion POR expresion
    (18) expresion -> . expresion DIVISION expresion
    (19) expresion -> . expresion MODULO expresion
    (20) expresion -> . MENOS expresion
    (21) expresion -> . PARENTIZQ expresion PARENTDER
    (34) expresion -> . ENTERO
    (35) expresion -> . DECIMAL
    (36) expresion -> . ID
    (37) expresion -> . TRUE
    (38) expresion -> . FALSE
    (39) expresion -> . CADENA
    (40) expresion -> . CARACTER

    NOT             shift and go to state 18
    MENOS           shift and go to state 19
    PARENTIZQ       shift and go to state 16
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    ID              shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    CADENA          shift and go to state 25
    CARACTER        shift and go to state 26

    expresion                      shift and go to state 30

state 17

    (22) impresion -> PRINT EXCLAMACION PARENTIZQ expresion . PARENTDER PUNTOYCOMA
    (6) expresion -> expresion . MAYOR expresion
    (7) expresion -> expresion . MENOR expresion
    (8) expresion -> expresion . MAYORIGUAL expresion
    (9) expresion -> expresion . MENORIGUAL expresion
    (10) expresion -> expresion . IGUALIGUAL expresion
    (11) expresion -> expresion . NOIGUAL expresion
    (12) expresion -> expresion . OR expresion
    (13) expresion -> expresion . AND expresion
    (15) expresion -> expresion . MAS expresion
    (16) expresion -> expresion . MENOS expresion
    (17) expresion -> expresion . POR expresion
    (18) expresion -> expresion . DIVISION expresion
    (19) expresion -> expresion . MODULO expresion

    PARENTDER       shift and go to state 31
    MAYOR           shift and go to state 32
    MENOR           shift and go to state 33
    MAYORIGUAL      shift and go to state 34
    MENORIGUAL      shift and go to state 35
    IGUALIGUAL      shift and go to state 36
    NOIGUAL         shift and go to state 37
    OR              shift and go to state 38
    AND             shift and go to state 39
    MAS             shift and go to state 40
    MENOS           shift and go to state 41
    POR             shift and go to state 42
    DIVISION        shift and go to state 43
    MODULO          shift and go to state 44


state 18

    (14) expresion -> NOT . expresion
    (6) expresion -> . expresion MAYOR expresion
    (7) expresion -> . expresion MENOR expresion
    (8) expresion -> . expresion MAYORIGUAL expresion
    (9) expresion -> . expresion MENORIGUAL expresion
    (10) expresion -> . expresion IGUALIGUAL expresion
    (11) expresion -> . expresion NOIGUAL expresion
    (12) expresion -> . expresion OR expresion
    (13) expresion -> . expresion AND expresion
    (14) expresion -> . NOT expresion
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion POR expresion
    (18) expresion -> . expresion DIVISION expresion
    (19) expresion -> . expresion MODULO expresion
    (20) expresion -> . MENOS expresion
    (21) expresion -> . PARENTIZQ expresion PARENTDER
    (34) expresion -> . ENTERO
    (35) expresion -> . DECIMAL
    (36) expresion -> . ID
    (37) expresion -> . TRUE
    (38) expresion -> . FALSE
    (39) expresion -> . CADENA
    (40) expresion -> . CARACTER

    NOT             shift and go to state 18
    MENOS           shift and go to state 19
    PARENTIZQ       shift and go to state 16
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    ID              shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    CADENA          shift and go to state 25
    CARACTER        shift and go to state 26

    expresion                      shift and go to state 45

state 19

    (20) expresion -> MENOS . expresion
    (6) expresion -> . expresion MAYOR expresion
    (7) expresion -> . expresion MENOR expresion
    (8) expresion -> . expresion MAYORIGUAL expresion
    (9) expresion -> . expresion MENORIGUAL expresion
    (10) expresion -> . expresion IGUALIGUAL expresion
    (11) expresion -> . expresion NOIGUAL expresion
    (12) expresion -> . expresion OR expresion
    (13) expresion -> . expresion AND expresion
    (14) expresion -> . NOT expresion
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion POR expresion
    (18) expresion -> . expresion DIVISION expresion
    (19) expresion -> . expresion MODULO expresion
    (20) expresion -> . MENOS expresion
    (21) expresion -> . PARENTIZQ expresion PARENTDER
    (34) expresion -> . ENTERO
    (35) expresion -> . DECIMAL
    (36) expresion -> . ID
    (37) expresion -> . TRUE
    (38) expresion -> . FALSE
    (39) expresion -> . CADENA
    (40) expresion -> . CARACTER

    NOT             shift and go to state 18
    MENOS           shift and go to state 19
    PARENTIZQ       shift and go to state 16
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    ID              shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    CADENA          shift and go to state 25
    CARACTER        shift and go to state 26

    expresion                      shift and go to state 46

state 20

    (34) expresion -> ENTERO .

    PARENTDER       reduce using rule 34 (expresion -> ENTERO .)
    MAYOR           reduce using rule 34 (expresion -> ENTERO .)
    MENOR           reduce using rule 34 (expresion -> ENTERO .)
    MAYORIGUAL      reduce using rule 34 (expresion -> ENTERO .)
    MENORIGUAL      reduce using rule 34 (expresion -> ENTERO .)
    IGUALIGUAL      reduce using rule 34 (expresion -> ENTERO .)
    NOIGUAL         reduce using rule 34 (expresion -> ENTERO .)
    OR              reduce using rule 34 (expresion -> ENTERO .)
    AND             reduce using rule 34 (expresion -> ENTERO .)
    MAS             reduce using rule 34 (expresion -> ENTERO .)
    MENOS           reduce using rule 34 (expresion -> ENTERO .)
    POR             reduce using rule 34 (expresion -> ENTERO .)
    DIVISION        reduce using rule 34 (expresion -> ENTERO .)
    MODULO          reduce using rule 34 (expresion -> ENTERO .)
    PUNTOYCOMA      reduce using rule 34 (expresion -> ENTERO .)


state 21

    (35) expresion -> DECIMAL .

    PARENTDER       reduce using rule 35 (expresion -> DECIMAL .)
    MAYOR           reduce using rule 35 (expresion -> DECIMAL .)
    MENOR           reduce using rule 35 (expresion -> DECIMAL .)
    MAYORIGUAL      reduce using rule 35 (expresion -> DECIMAL .)
    MENORIGUAL      reduce using rule 35 (expresion -> DECIMAL .)
    IGUALIGUAL      reduce using rule 35 (expresion -> DECIMAL .)
    NOIGUAL         reduce using rule 35 (expresion -> DECIMAL .)
    OR              reduce using rule 35 (expresion -> DECIMAL .)
    AND             reduce using rule 35 (expresion -> DECIMAL .)
    MAS             reduce using rule 35 (expresion -> DECIMAL .)
    MENOS           reduce using rule 35 (expresion -> DECIMAL .)
    POR             reduce using rule 35 (expresion -> DECIMAL .)
    DIVISION        reduce using rule 35 (expresion -> DECIMAL .)
    MODULO          reduce using rule 35 (expresion -> DECIMAL .)
    PUNTOYCOMA      reduce using rule 35 (expresion -> DECIMAL .)


state 22

    (36) expresion -> ID .

    PARENTDER       reduce using rule 36 (expresion -> ID .)
    MAYOR           reduce using rule 36 (expresion -> ID .)
    MENOR           reduce using rule 36 (expresion -> ID .)
    MAYORIGUAL      reduce using rule 36 (expresion -> ID .)
    MENORIGUAL      reduce using rule 36 (expresion -> ID .)
    IGUALIGUAL      reduce using rule 36 (expresion -> ID .)
    NOIGUAL         reduce using rule 36 (expresion -> ID .)
    OR              reduce using rule 36 (expresion -> ID .)
    AND             reduce using rule 36 (expresion -> ID .)
    MAS             reduce using rule 36 (expresion -> ID .)
    MENOS           reduce using rule 36 (expresion -> ID .)
    POR             reduce using rule 36 (expresion -> ID .)
    DIVISION        reduce using rule 36 (expresion -> ID .)
    MODULO          reduce using rule 36 (expresion -> ID .)
    PUNTOYCOMA      reduce using rule 36 (expresion -> ID .)


state 23

    (37) expresion -> TRUE .

    PARENTDER       reduce using rule 37 (expresion -> TRUE .)
    MAYOR           reduce using rule 37 (expresion -> TRUE .)
    MENOR           reduce using rule 37 (expresion -> TRUE .)
    MAYORIGUAL      reduce using rule 37 (expresion -> TRUE .)
    MENORIGUAL      reduce using rule 37 (expresion -> TRUE .)
    IGUALIGUAL      reduce using rule 37 (expresion -> TRUE .)
    NOIGUAL         reduce using rule 37 (expresion -> TRUE .)
    OR              reduce using rule 37 (expresion -> TRUE .)
    AND             reduce using rule 37 (expresion -> TRUE .)
    MAS             reduce using rule 37 (expresion -> TRUE .)
    MENOS           reduce using rule 37 (expresion -> TRUE .)
    POR             reduce using rule 37 (expresion -> TRUE .)
    DIVISION        reduce using rule 37 (expresion -> TRUE .)
    MODULO          reduce using rule 37 (expresion -> TRUE .)
    PUNTOYCOMA      reduce using rule 37 (expresion -> TRUE .)


state 24

    (38) expresion -> FALSE .

    PARENTDER       reduce using rule 38 (expresion -> FALSE .)
    MAYOR           reduce using rule 38 (expresion -> FALSE .)
    MENOR           reduce using rule 38 (expresion -> FALSE .)
    MAYORIGUAL      reduce using rule 38 (expresion -> FALSE .)
    MENORIGUAL      reduce using rule 38 (expresion -> FALSE .)
    IGUALIGUAL      reduce using rule 38 (expresion -> FALSE .)
    NOIGUAL         reduce using rule 38 (expresion -> FALSE .)
    OR              reduce using rule 38 (expresion -> FALSE .)
    AND             reduce using rule 38 (expresion -> FALSE .)
    MAS             reduce using rule 38 (expresion -> FALSE .)
    MENOS           reduce using rule 38 (expresion -> FALSE .)
    POR             reduce using rule 38 (expresion -> FALSE .)
    DIVISION        reduce using rule 38 (expresion -> FALSE .)
    MODULO          reduce using rule 38 (expresion -> FALSE .)
    PUNTOYCOMA      reduce using rule 38 (expresion -> FALSE .)


state 25

    (39) expresion -> CADENA .

    PARENTDER       reduce using rule 39 (expresion -> CADENA .)
    MAYOR           reduce using rule 39 (expresion -> CADENA .)
    MENOR           reduce using rule 39 (expresion -> CADENA .)
    MAYORIGUAL      reduce using rule 39 (expresion -> CADENA .)
    MENORIGUAL      reduce using rule 39 (expresion -> CADENA .)
    IGUALIGUAL      reduce using rule 39 (expresion -> CADENA .)
    NOIGUAL         reduce using rule 39 (expresion -> CADENA .)
    OR              reduce using rule 39 (expresion -> CADENA .)
    AND             reduce using rule 39 (expresion -> CADENA .)
    MAS             reduce using rule 39 (expresion -> CADENA .)
    MENOS           reduce using rule 39 (expresion -> CADENA .)
    POR             reduce using rule 39 (expresion -> CADENA .)
    DIVISION        reduce using rule 39 (expresion -> CADENA .)
    MODULO          reduce using rule 39 (expresion -> CADENA .)
    PUNTOYCOMA      reduce using rule 39 (expresion -> CADENA .)


state 26

    (40) expresion -> CARACTER .

    PARENTDER       reduce using rule 40 (expresion -> CARACTER .)
    MAYOR           reduce using rule 40 (expresion -> CARACTER .)
    MENOR           reduce using rule 40 (expresion -> CARACTER .)
    MAYORIGUAL      reduce using rule 40 (expresion -> CARACTER .)
    MENORIGUAL      reduce using rule 40 (expresion -> CARACTER .)
    IGUALIGUAL      reduce using rule 40 (expresion -> CARACTER .)
    NOIGUAL         reduce using rule 40 (expresion -> CARACTER .)
    OR              reduce using rule 40 (expresion -> CARACTER .)
    AND             reduce using rule 40 (expresion -> CARACTER .)
    MAS             reduce using rule 40 (expresion -> CARACTER .)
    MENOS           reduce using rule 40 (expresion -> CARACTER .)
    POR             reduce using rule 40 (expresion -> CARACTER .)
    DIVISION        reduce using rule 40 (expresion -> CARACTER .)
    MODULO          reduce using rule 40 (expresion -> CARACTER .)
    PUNTOYCOMA      reduce using rule 40 (expresion -> CARACTER .)


state 27

    (23) impresion -> PRINTLN EXCLAMACION PARENTIZQ expresion . PARENTDER PUNTOYCOMA
    (6) expresion -> expresion . MAYOR expresion
    (7) expresion -> expresion . MENOR expresion
    (8) expresion -> expresion . MAYORIGUAL expresion
    (9) expresion -> expresion . MENORIGUAL expresion
    (10) expresion -> expresion . IGUALIGUAL expresion
    (11) expresion -> expresion . NOIGUAL expresion
    (12) expresion -> expresion . OR expresion
    (13) expresion -> expresion . AND expresion
    (15) expresion -> expresion . MAS expresion
    (16) expresion -> expresion . MENOS expresion
    (17) expresion -> expresion . POR expresion
    (18) expresion -> expresion . DIVISION expresion
    (19) expresion -> expresion . MODULO expresion

    PARENTDER       shift and go to state 47
    MAYOR           shift and go to state 32
    MENOR           shift and go to state 33
    MAYORIGUAL      shift and go to state 34
    MENORIGUAL      shift and go to state 35
    IGUALIGUAL      shift and go to state 36
    NOIGUAL         shift and go to state 37
    OR              shift and go to state 38
    AND             shift and go to state 39
    MAS             shift and go to state 40
    MENOS           shift and go to state 41
    POR             shift and go to state 42
    DIVISION        shift and go to state 43
    MODULO          shift and go to state 44


state 28

    (24) declaracion -> LET MUT ID IGUAL . expresion PUNTOYCOMA
    (6) expresion -> . expresion MAYOR expresion
    (7) expresion -> . expresion MENOR expresion
    (8) expresion -> . expresion MAYORIGUAL expresion
    (9) expresion -> . expresion MENORIGUAL expresion
    (10) expresion -> . expresion IGUALIGUAL expresion
    (11) expresion -> . expresion NOIGUAL expresion
    (12) expresion -> . expresion OR expresion
    (13) expresion -> . expresion AND expresion
    (14) expresion -> . NOT expresion
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion POR expresion
    (18) expresion -> . expresion DIVISION expresion
    (19) expresion -> . expresion MODULO expresion
    (20) expresion -> . MENOS expresion
    (21) expresion -> . PARENTIZQ expresion PARENTDER
    (34) expresion -> . ENTERO
    (35) expresion -> . DECIMAL
    (36) expresion -> . ID
    (37) expresion -> . TRUE
    (38) expresion -> . FALSE
    (39) expresion -> . CADENA
    (40) expresion -> . CARACTER

    NOT             shift and go to state 18
    MENOS           shift and go to state 19
    PARENTIZQ       shift and go to state 16
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    ID              shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    CADENA          shift and go to state 25
    CARACTER        shift and go to state 26

    expresion                      shift and go to state 48

state 29

    (25) declaracion -> LET MUT ID DOSPUNTOS . tipo IGUAL expresion PUNTOYCOMA
    (26) tipo -> . I64
    (27) tipo -> . F64
    (28) tipo -> . BOOL
    (29) tipo -> . CHAR
    (30) tipo -> . STRING
    (31) tipo -> . STR
    (32) tipo -> . USIZE
    (33) tipo -> . VEC

    I64             shift and go to state 50
    F64             shift and go to state 51
    BOOL            shift and go to state 52
    CHAR            shift and go to state 53
    STRING          shift and go to state 54
    STR             shift and go to state 55
    USIZE           shift and go to state 56
    VEC             shift and go to state 57

    tipo                           shift and go to state 49

state 30

    (21) expresion -> PARENTIZQ expresion . PARENTDER
    (6) expresion -> expresion . MAYOR expresion
    (7) expresion -> expresion . MENOR expresion
    (8) expresion -> expresion . MAYORIGUAL expresion
    (9) expresion -> expresion . MENORIGUAL expresion
    (10) expresion -> expresion . IGUALIGUAL expresion
    (11) expresion -> expresion . NOIGUAL expresion
    (12) expresion -> expresion . OR expresion
    (13) expresion -> expresion . AND expresion
    (15) expresion -> expresion . MAS expresion
    (16) expresion -> expresion . MENOS expresion
    (17) expresion -> expresion . POR expresion
    (18) expresion -> expresion . DIVISION expresion
    (19) expresion -> expresion . MODULO expresion

    PARENTDER       shift and go to state 58
    MAYOR           shift and go to state 32
    MENOR           shift and go to state 33
    MAYORIGUAL      shift and go to state 34
    MENORIGUAL      shift and go to state 35
    IGUALIGUAL      shift and go to state 36
    NOIGUAL         shift and go to state 37
    OR              shift and go to state 38
    AND             shift and go to state 39
    MAS             shift and go to state 40
    MENOS           shift and go to state 41
    POR             shift and go to state 42
    DIVISION        shift and go to state 43
    MODULO          shift and go to state 44


state 31

    (22) impresion -> PRINT EXCLAMACION PARENTIZQ expresion PARENTDER . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 59


state 32

    (6) expresion -> expresion MAYOR . expresion
    (6) expresion -> . expresion MAYOR expresion
    (7) expresion -> . expresion MENOR expresion
    (8) expresion -> . expresion MAYORIGUAL expresion
    (9) expresion -> . expresion MENORIGUAL expresion
    (10) expresion -> . expresion IGUALIGUAL expresion
    (11) expresion -> . expresion NOIGUAL expresion
    (12) expresion -> . expresion OR expresion
    (13) expresion -> . expresion AND expresion
    (14) expresion -> . NOT expresion
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion POR expresion
    (18) expresion -> . expresion DIVISION expresion
    (19) expresion -> . expresion MODULO expresion
    (20) expresion -> . MENOS expresion
    (21) expresion -> . PARENTIZQ expresion PARENTDER
    (34) expresion -> . ENTERO
    (35) expresion -> . DECIMAL
    (36) expresion -> . ID
    (37) expresion -> . TRUE
    (38) expresion -> . FALSE
    (39) expresion -> . CADENA
    (40) expresion -> . CARACTER

    NOT             shift and go to state 18
    MENOS           shift and go to state 19
    PARENTIZQ       shift and go to state 16
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    ID              shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    CADENA          shift and go to state 25
    CARACTER        shift and go to state 26

    expresion                      shift and go to state 60

state 33

    (7) expresion -> expresion MENOR . expresion
    (6) expresion -> . expresion MAYOR expresion
    (7) expresion -> . expresion MENOR expresion
    (8) expresion -> . expresion MAYORIGUAL expresion
    (9) expresion -> . expresion MENORIGUAL expresion
    (10) expresion -> . expresion IGUALIGUAL expresion
    (11) expresion -> . expresion NOIGUAL expresion
    (12) expresion -> . expresion OR expresion
    (13) expresion -> . expresion AND expresion
    (14) expresion -> . NOT expresion
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion POR expresion
    (18) expresion -> . expresion DIVISION expresion
    (19) expresion -> . expresion MODULO expresion
    (20) expresion -> . MENOS expresion
    (21) expresion -> . PARENTIZQ expresion PARENTDER
    (34) expresion -> . ENTERO
    (35) expresion -> . DECIMAL
    (36) expresion -> . ID
    (37) expresion -> . TRUE
    (38) expresion -> . FALSE
    (39) expresion -> . CADENA
    (40) expresion -> . CARACTER

    NOT             shift and go to state 18
    MENOS           shift and go to state 19
    PARENTIZQ       shift and go to state 16
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    ID              shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    CADENA          shift and go to state 25
    CARACTER        shift and go to state 26

    expresion                      shift and go to state 61

state 34
